[package]
name = "alarmon"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true

[workspace]
resolver = "3"
members = ["pcap", "tcpip"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["cffnpwr <cffnpwr@gmail.com>"]
repository = "https://github.com/cffnpwr/alarmon.git"
license-file = "LICENSE"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"

[dependencies]
anyhow.workspace = true
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
pcap = { path = "./pcap", features = ["libpcap"] }
tcpip = { path = "./tcpip" }
thiserror.workspace = true
nix = { version = "0.30.1", features = ["uio"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.30.1", features = ["socket"] }
socket2 = "0.5.8"
libc = "0.2"
