[package]
name = "alarmon"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true

[workspace]
resolver = "3"
members = ["pcap", "tcpip"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["cffnpwr <cffnpwr@gmail.com>"]
repository = "https://github.com/cffnpwr/alarmon.git"
license-file = "LICENSE"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
nix = { version = "0.30.1", features = ["net"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }

[dependencies]
anyhow.workspace = true
async-trait = "0.1.88"
pcap = { path = "./pcap", features = ["libpcap"] }
tokio.workspace = true
tcpip = { path = "./tcpip" }
thiserror.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
log = "0.4.27"
env_logger = "0.11.8"
chrono.workspace = true
nix.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["chrono", "time_0_3"] }
parking_lot = "0.12.4"
fxhash = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
socket2 = "0.5.10"
libc = "0.2.174"

[dev-dependencies]
tempfile = "3.20.0"
mockall = "0.13.1"
tokio-test = "0.4.4"
