[package]
name = "pcap"
description = "cross-platform packet capture library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
libpcap = { package = "pcap", version = "2.2.0", features = ["capture-stream"], optional = true }
cfg-if = "1.0.0"
nix.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
async-trait = "0.1.88"

[features]
libpcap = ["dep:libpcap"]
netmap = []
pcap-rs = []
ebpf = []
dpdk = []
