[package]
name = "tcpip"
description = "TCP/IP packet parsing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
common-lib = { git = "https://github.com/cffnpwr/rust-common-lib.git", branch = "feature/auto-impl-macro", version = "0.1.0", features = ["auto-impl-macro"] }
thiserror.workspace = true
