[package]
name = "xtask"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
fxhash = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "process"] }
